--- a/NTierArchitecture.WebApi/appsettings.json
+++ b/NTierArchitecture.WebApi/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SqlServer": "Data Source=DESKTOP-L6NJT48\\SQLEXPRESS;Initial Catalog=RealSolutionsDb;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
+    "SqlServer": "Data Source=DESKTOP-L6NJT48\\SQLEXPRESS;Initial Catalog=RealSolutiodddfnsDb;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
   },
   "Jwt": {
     "Issuer": "Ali Can Yücel",
